# c_engine_old

./: .gitignore  CMakeLists.txt  README.md
_docs/: open gl model.txt  todo.txt
data/materials/: default_material.mat
data/models/: palm1.mtl  plane.cm
data/shaders/: default_fragment_shader.glsl  default_geometry_shader.glsl  default_vertex_shader.glsl
data/shaders/editor/: editor_grid_frag.glsl  editor_grid_vertex.glsl
data/shaders/with_geometry/: default_fragment_shader.glsl
data/textures/powerloader/: PowerLoaderDamage_C.tga  PowerLoaderGrate_D.tga  PowerLoaderGrate_N.tga  PowerLoaderLight_m.tga  PowerLoaderLower_S.tga  PowerLoaderUpper_N.tga
include/: audio.h  collections.h  core.h  editor.h  engine.h  entities.h  graphics.h  input.h  io.h  log.h  math_helper.h  maths.h  obj_loader.h  time.h  utilities.h
source/: audio.cpp  collections.cpp  core.cpp  editor.cpp  entities.cpp  graphics.cpp  input.cpp  io.cpp  log.cpp  main.cpp  maths.cpp  palm_main.cpp  time.cpp  utilities.cpp
